Update test html

--- a/Renderer/test.html
+++ b/Renderer/test.html
@@ -48,5 +48,25 @@ window.onload = function onload_callback() {
 <div id="text1" style="position: absolute; top: 50px; left: 100; width: 100; height: 150; overflow-x: visible; overflow-y: scroll; font-family: Vafthrudnir; font-size: 14px;">
 <span style="font-size: 1em;">Some </span><span style="font-size: 0.8em;">text text text text text text text</span>
 </div>
+<img src="numbersTintable/10.png">
 </body>
 </html>
+<!--
+Engagement-tint = 20.0,0.6,0.9
+HitPoints-tint = 0.0,0.9,0.9
+Page-tint = 0.0,0.0,1.0
+Progress-tint = 20.0,0.6,0.9
+ResourceCost-tint = 180.0,0.0,1.0
+Stage-tint = 190.0,0.6,0.9
+Difficulty-tint = 0.0,0.2,1.0
+Region-tint = 0.0,0.2,1.0
+ThreatCost-tint = 200.0,0.7,0.7
+White-tint = 0.0,0.0,0.9
+Red-tint = 0.0,1.0,1.0
+Green-tint = 120.0,1.0,1.0
+Yellow-tint = 60.0,1.0,1.0
+Blue-tint = -180.0,1.0,1.0
+Black-tint = 0.0,0.0,0.0
+Purple-tint = -60.0,1.0,1.0
+Brown-tint = 30.0,1.0,1.0
+-->
