--- a/Renderer/template.html
+++ b/Renderer/template.html
@@ -41,31 +41,25 @@ function correct_size(id) {
     if (!container) {
         return;
     }
+
     var size = parseInt(container.style.fontSize.replace('px', ''));
-    if (parseInt(container.style.height.replace('px', '')) > parseInt(container.style.width.replace('px', '')) * 3) {
-        while (container.scrollWidth > container.clientWidth) {
-            size -= 0.5;
-            if (size < min_size) {
-                break;
-            }
-            container.style.fontSize = size + 'px';
-        }
-        container.style.overflowX = 'visible';
+    container.style.overflowY = 'scroll';
+    while ((container.scrollHeight > container.clientHeight) && (size > min_size)) {
+        size -= 0.5;
+        container.style.fontSize = size + 'px';
     }
-    else {
-        while (container.scrollHeight > container.clientHeight) {
-            size -= 0.5;
-            if (size < min_size) {
-                break;
-            }
-            container.style.fontSize = size + 'px';
-        }
-        container.style.overflowY = 'visible';
+    container.style.overflowY = 'visible';
+
+    container.style.overflowX = 'scroll';
+    while ((container.scrollWidth > container.clientWidth) && (size > min_size)) {
+        size -= 0.5;
+        container.style.fontSize = size + 'px';
     }
+    container.style.overflowX = 'visible';
 }
 
 window.onload = function onload_callback() {
-    for (let i = 0; i < containers.length; i++) {
+    for (var i = 0; i < containers.length; i++) {
         correct_size(containers[i]);
     }
 };
